@@ -21,24 +21,12 @@
 #include <endian.h>
 
 
-/* void *memset(void *s, int c, size_t n).
-
-   This routine could be optimized further for MIPS64, but this is left
-   as an exercise for the future. When it is done, the file should be kept
-   as a sisterfile to this one, and placed in the sysdeps/mips/mips64 
-   directory.  */
+/* void *memset(void *s, int c, size_t n).  */
 
 #if __BYTE_ORDER == __BIG_ENDIAN
 # define SWHI	swl		/* high part is left in big-endian	*/
 #else
 # define SWHI	swr		/* high part is right in little-endian	*/
-#endif
-
-#ifndef t0
-# define t0 a4
-#endif
-#ifndef t1
-# define t1 a5
 #endif
 
 ENTRY (memset)
